--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@angular/router": "^11.0.8",
     "@ngrx/effects": "^12.0.0",
     "@ngrx/entity": "^12.0.0",
-    "@ngrx/store": "12.0.0",
+    "@ngrx/schematics": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.1.0",
     "zone.js": "^0.11.3"
