--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.16",
-    "@angular/common": "^12.2.16",
-    "@angular/compiler": "^12.2.16",
-    "@angular/core": "^12.2.16",
-    "@angular/forms": "^12.2.16",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "^12.2.16",
-    "@angular/router": "^12.2.16",
-    "@ngrx/effects": "^12.0.0",
-    "@ngrx/entity": "^12.0.0",
-    "@ngrx/schematics": "^12.0.0",
-    "@ngrx/store": "^12.0.0",
-    "@ngrx/store-devtools": "^12.0.0",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "^14.0.4",
+    "@angular/common": "^14.0.4",
+    "@angular/compiler": "^14.0.4",
+    "@angular/core": "^14.0.4",
+    "@angular/forms": "^14.0.4",
+    "@angular/platform-browser": "^14.0.4",
+    "@angular/platform-browser-dynamic": "^14.0.4",
+    "@angular/router": "^14.0.4",
+    "@ngrx/component": "^14.0.1",
+    "@ngrx/effects": "^14.0.1",
+    "@ngrx/store": "^14.0.1",
+    "@ngrx/store-devtools": "^14.0.1",
+    "rxjs": "^7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.6"
   },
   "scripts": {
     "ng": "ng",
